--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@ header {
     text-align: center;
 }
 
-section:hover {
-    background-color:lightgray;
-}
 
 section {
     background-color:white;
@@ -13,6 +10,9 @@ section {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    &:hover {
+        background-color:lightgray;
+    }
 }
 
 section:nth-child(even) {
@@ -26,8 +26,20 @@ section img {
 }
 
 .learnmore {
-    background-color:blue;
+    background: linear-gradient(to right, blue,rgb(144, 49, 223));
     padding: 1em;
     text-decoration: none;
     color: white;
+    border-radius: 25px;
 }
+
+.arrow {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    border-radius: 3px;
+    display: inline-block;
+    padding: 5px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    margin: auto;
+  }
