--- a/stylesheets/android-style.css
+++ b/stylesheets/android-style.css
@@ -1,6 +1,11 @@
-ul a {
+/*ul a {
     text-decoration: none;
     color: black;
+}*/
+
+h1 {
+    text-align: center;
+    margin-top: 1.5em;
 }
 
 section {
@@ -9,7 +14,7 @@ section {
 }
 
 video {
-    width: 10em;
+    width: 13em;
     height: auto;
 }
 
@@ -21,7 +26,12 @@ div {
     margin-left: auto;
     margin-right: auto;
     max-width: 13em;
+    padding: 31px;
     text-align: center;
+    border-radius: 35px;
+    background: #e0e0e0;
+    box-shadow:  20px 20px 60px #bebebe,
+                -20px -20px 60px #ffffff;
 }
 
 div a {
@@ -32,6 +42,7 @@ div a {
     position: relative;
     margin-top: 20px;
     z-index: 1;
+    font-size: 1.3em;
     &:hover {
         color: white;
     }
@@ -62,9 +73,9 @@ div a:hover::before {
 .landscape-video {
     transform: rotate(90deg);
     transform-origin: 37% 78%;
-    height: 10em;
+    height: 13em;
     width: auto;
     & ~ a {
-        margin-top: 200px;
+        margin-top: 250px;
     }
 }
