--- a/stylesheets/android-style.css
+++ b/stylesheets/android-style.css
@@ -5,7 +5,11 @@
 
 h1 {
     text-align: center;
-    margin-top: 1.5em;
+    margin-top: 1em;
+    
+    span {
+        font-size: 0.7em;
+    }
 }
 
 section {
@@ -16,22 +20,26 @@ section {
 video {
     width: 13em;
     height: auto;
+    transition: all .3s ease;
 }
 
 div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2em;
+    margin: 1.5em;
     margin-left: auto;
     margin-right: auto;
-    max-width: 13em;
+    max-width: 15em;
     padding: 31px;
     text-align: center;
     border-radius: 35px;
     background: #e0e0e0;
     box-shadow:  20px 20px 60px #bebebe,
                 -20px -20px 60px #ffffff;
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 div a {
