updated library stylesheet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,14 @@ body {
 	margin-bottom:30px;
 }
 
+header h1 {
+	text-align: center;
+	font-size: 3em;
+}
+
+header p {
+	font-size: medium;
+}
 
 
 
